deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: bramvan/frontend
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendadd
  labels:
    app: backendadd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendadd
  template:
    metadata:
      labels:
        app: backendadd
    spec:
      containers:
        - name: backendadd
          image: bramvan/backendadd
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendbid
  labels:
    app: backendbid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendbid
  template:
    metadata:
      labels:
        app: backendbid
    spec:
      containers:
        - name: backendbid
          image: bramvan/backendbid
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendsearch
  labels:
    app: backendsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendsearch
  template:
    metadata:
      labels:
        app: backendsearch
    spec:
      containers:
        - name: backendsearch
          image: bramvan/backendsearch
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendimage
  labels:
    app: backendimage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendimage
  template:
    metadata:
      labels:
        app: backendimage
    spec:
      containers:
        - name: backendimage
          image: bramvan/backendimage
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendauth
  labels:
    app: backendauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendauth
  template:
    metadata:
      labels:
        app: backendauth
    spec:
      containers:
        - name: backendauth
          image: bramvan/backendauth
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendmessage
  labels:
    app: backendmessage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendmessage
  template:
    metadata:
      labels:
        app: backendmessage
    spec:
      containers:
        - name: backendmessage
          image: bramvan/backendmessage
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backendnotification
  labels:
    app: backendnotification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backendnotification
  template:
    metadata:
      labels:
        app: backendnotification
    spec:
      containers:
        - name: backendnotification
          image: bramvan/backendnotification
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
