ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kwetter-frontend-service
                port:
                  number: 80
          - path: /api/add
            pathType: Prefix
            backend:
              service:
                name: tweetapi-service
                port:
                  number: 80
          - path: /api/bid
            pathType: Prefix
            backend:
              service:
                name: userprofileapi-service
                port:
                  number: 80
